# backpack

./: .gitignore  README.md  dotfiles.sh  settler.json  settler.sh
IDEs/clion/: CMakeLists.txt
IDEs/clion/live-templates/: cf-geom.txt  cf-temp.txt
boilerplates/angular2/: .gitignore  README.md  index.html  styles.css
boilerplates/angular2/app/: RAFRentFrontEnd.sublime-project  app.component.ts  app.routing.ts  dashboard.component.ts  hero-detail.component.ts  hero-search.component.ts  hero-search.service.ts  heroes.component.ts  in-memory-data.service.ts
cf-meta/: README.md  cf-paste.py  cf-tool.py
clion/live-templates/: cf-temp.txt
codes/dp/: CMakeLists.txt  largest-common-subsequence.cpp  largest-subsquare.cpp  largest-sum-path-matrix.cpp  max-sum-non-neighbour.cpp
codes/dynamic-programming/: largest-subsquare.cpp
codes/general/: binary-representation.cpp  missing-number.cpp  position-of-only-set-bit.cpp
codes/graphs/: graph-bfs.cpp  graph-dfs.cpp
codes/lists/: merge-two-lists.cpp  switch-every-two-nodes.cpp
codes/strings/: remove-duplicates.cpp
design/: kuler-adobe-pallete.gpl
design/patterns/: blueprint.xcf  readme.md
dotfiles/: .bash_aliases  .gitconfig  .vimrc  bash_aliases  bashrc  vimrc
languages/: python-cheatsheet.md
linux/: anaconda  bash.md  git.md  mute_mic.sh  scripts-shell.md  unmute_mic.sh
matheap/: geometry.md
notes/: bash-flow.md  docker.md  python-cheatsheet.md  tensorflow.md  text-creation.md  tmux.md
productivity/: FocusList.txt  gen-jazzradio.sh
templates/: README.md  gitmessage.txt
(+2 files in other folders)
